fix: add scrollbar for big diagrams (#4120)
In case of large DrawIO diagrams, today it is sometimes impossible to display it totally on the screen.
This quick workaround provides a way to enable a scrollbar if the width of the diagram is higher than the browser/screen width.

--- a/client/themes/default/scss/app.scss
+++ b/client/themes/default/scss/app.scss
@@ -600,6 +600,7 @@
 
   .diagram {
     margin-top: 1rem;
+    overflow: auto;
     svg:first-child {
       direction: ltr;
     }
